--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -18,6 +18,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      
+      - name: Grant Permission to Execute
+        run: chmod +x gradlew
+        
       - name: Unit tests
         run: bash ./gradlew test --stacktrace
 
@@ -31,6 +35,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
+      - name: Grant Permission to Execute
+        run: chmod +x gradlew
+        
       - name: Build debug APK
         run: bash ./gradlew assembleDebug --stacktrace
       - name: Upload APK
