--- a/.github/workflows/Lint.yml
+++ b/.github/workflows/Lint.yml
@@ -19,4 +19,6 @@ jobs:
       - name: Lint Code Base
         uses: docker://github/super-linter:v2.2.0
         env:
-          VALIDATE_ALL_CODEBASE: true
+          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_XML: true
+          VALIDATE_KOTLIN: true
