--- a/.github/workflows/Linter.yml
+++ b/.github/workflows/Linter.yml
@@ -16,6 +16,4 @@ jobs:
       - name: Lint Code Base
         uses: docker://github/super-linter:v2.2.0
         env:
-          VALIDATE_ALL_CODEBASE: false
-          VALIDATE_XML: true
-          VALIDATE_KOTLIN: true
+          VALIDATE_ALL_CODEBASE: true
