--- a/.github/workflows/Lint.yml
+++ b/.github/workflows/Lint.yml
@@ -17,3 +17,4 @@ jobs:
         uses: docker://github/super-linter:v2.2.0
         env:
           VALIDATE_ALL_CODEBASE: true
+          VALIDATE_MD: false
