--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Test
 on: [push, pull_request]
 
 jobs:
@@ -8,11 +8,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 12
+      - name: Configure JDK
         uses: actions/setup-java@v1
         with:
           java-version: 12
-        
+
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1
+
       - name: Run Unit tests
         run: ./gradlew test --stacktrace
 
