--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -4,26 +4,13 @@ on: [push, pull_request]
 jobs:
   test:
     name: Run Unit Tests
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v1
-
-#      - name: Configure JDK
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 12
 
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
 
       - name: Run Unit tests
         run: ./gradlew test --stacktrace
-
-      - name: Run Android tests
-        uses: reactivecircus/android-emulator-runner@v1
-        with:
-          api-level: 29
-          arch: x86
-          disable-animations: true
-          script: ./gradlew connectedCheck --stacktrace
